<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/camera"
        android:showAsAction="ifRoom"
        android:title="" />-->

    <item android:id="@+id/prayer_times" android:title="@string/prayer_times"
        android:orderInCategory="100" app:showAsAction="always" />

    <item android:id="@+id/announcement_broadcaster" android:title="@string/announcement_broadcaster"
        android:orderInCategory="100" app:showAsAction="always" />

    <item android:id="@+id/qibla_direction" android:title="@string/qibla_direction"
        android:orderInCategory="100" app:showAsAction="always" />
</menu>
